--- a/02-to-do-list-api/package.json
+++ b/02-to-do-list-api/package.json
@@ -1,12 +1,10 @@
 {
-  "name": "01-personal-blogging-platform-api",
+  "name": "02-to-do-list-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
-
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
