--- a/01-personal-blogging-platform-api/client/package.json
+++ b/01-personal-blogging-platform-api/client/package.json
@@ -2,7 +2,7 @@
   "name": "client",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "dependencies": {
     "js-tokens": "^4.0.0",
     "loose-envify": "^1.4.0",
@@ -14,9 +14,15 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "react-scripts start", 
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject" 
   },
   "keywords": [],
   "author": "",
   "license": "ISC"
 }
+
+
+
