--- a/01-personal-blogging-platform-api/package.json
+++ b/01-personal-blogging-platform-api/package.json
@@ -6,9 +6,13 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js"
-
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "colors": "^1.4.0",
+    "figlet": "^1.5.0", 
+    "chalk": "^5.3.0"
+  }
 }
