--- a/01-personal-blogging-platform-api/package.json
+++ b/01-personal-blogging-platform-api/package.json
@@ -11,8 +11,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "colors": "^1.4.0",
-    "figlet": "^1.5.0", 
-    "chalk": "^5.3.0"
+    "colors": "^1.4.0"
   }
 }
