--- a/01-personal-blogging-platform-api/server/package.json
+++ b/01-personal-blogging-platform-api/server/package.json
@@ -37,6 +37,7 @@
     "has-symbols": "^1.0.3",
     "hasown": "^2.0.2",
     "http-errors": "^2.0.0",
+    "http-status-codes": "^2.3.0",
     "iconv-lite": "^0.4.24",
     "inherits": "^2.0.4",
     "ipaddr.js": "^1.9.1",
