--- a/01-personal-blogging-platform-api/client/package.json
+++ b/01-personal-blogging-platform-api/client/package.json
@@ -1,7 +1,6 @@
 {
   "name": "client",
   "version": "1.0.0",
-  "description": "",
   "main": "src/index.js",
   "dependencies": {
     "js-tokens": "^4.0.0",
@@ -14,15 +13,13 @@
   },
   "devDependencies": {},
   "scripts": {
-    "start": "react-scripts start", 
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject" 
+    "eject": "react-scripts eject"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "description": ""
 }
-
-
-
