--- a/01-personal-blogging-platform-api/client/package.json
+++ b/01-personal-blogging-platform-api/client/package.json
@@ -3,20 +3,30 @@
   "version": "1.0.0",
   "main": "src/index.js",
   "dependencies": {
-    "js-tokens": "^4.0.0",
-    "loose-envify": "^1.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router": "^6.26.2",
     "react-router-dom": "^6.26.2",
-    "scheduler": "^0.23.2"
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1",
+    "axios": "^1.7.7",
+    "styled-components": "^6.1.13",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.1.5",
+    "@reduxjs/toolkit": "^2.3.0"
   },
-  "devDependencies": {},
+
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint src --ext .js,.jsx,.ts,.tsx"
+  },
+
+  "devDependencies": {
+
   },
   "keywords": [],
   "author": "",
