--- a/root/package.json
+++ b/root/package.json
@@ -16,32 +16,15 @@
   ],
   "scripts": {},
   "dependencies": {
-    "bcrypt": "^5.1.1",
-    "body-parser": "^1.20.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.0",
-    "express-async-errors": "^3.1.1",
-    "helmet": "^8.0.0",
-    "http-status-codes": "^2.3.0",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.7.0",
-    "morgan": "^1.10.0",
+    "dotenv": "^16.4.5"
 
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-redux": "^9.1.2",
-    "react-router-dom": "^6.26.2",
-    "redux": "^5.0.1",
-    "styled-components": "^6.1.13",
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
-    "@mui/material": "^6.1.5",
-    "@reduxjs/toolkit": "^2.3.0",
-    "axios": "^1.7.7"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "eslint": "^9.13.0",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.7",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14"
