--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,25 @@
-.env
+
+# Node Dependencies
 node_modules
+
+
+#Environment Variables
+.env
+
+# Status Codes
 StatusCodes
+
+
+# Build output
+dist/
+build/
+
+# Logs
+logs/
+*.log
+
+#
+.DS_Store
+Thumbs.db
+.vscode/\
+
