--- a/02-to-do-list-api/server/package.json
+++ b/02-to-do-list-api/server/package.json
@@ -3,19 +3,18 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
-  
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.3",
     "colors": "^1.4.0",
+    "cors": "^2.8.5",
     "express": "^4.21.0",
     "express-async-errors": "^3.1.1",
     "helmet": "^8.0.0",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.0",
-    "morgan": "^1.10.0",
-    "bcrypt": "^5.1.1",
-    "body-parser": "^1.20.3",
-    "cors": "^2.8.5"
+    "morgan": "^1.10.0"
   },
   "scripts": {
     "start": "node app.js",
