Update config file

--- a/01-personal-blogging-platform-api/server/vercel.json
+++ b/01-personal-blogging-platform-api/server/vercel.json
@@ -1,15 +1,5 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "package.json",
-      "use": "@vercel/node"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/server/app.js"
-    }
-  ]
+    "version": 2,
+    "builds": [{"src": "index.js", "use": "@vercel/node"}],
+    "rewrites": [{"source": "/(.*)", "destination": "/"}]
 }
