--- a/01-personal-blogging-platform-api/package.json
+++ b/01-personal-blogging-platform-api/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "01-personal-blogging-platform-api",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {},
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "colors": "^1.4.0"
-  }
+    "name": "01-personal-blogging-platform-api",
+    "version": "1.0.0",
+    "description": "",
+    "main": "server/app.js",
+    "scripts": {},
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "colors": "^1.4.0"
+    }
 }
