--- a/01-personal-blogging-platform-api/server/package.json
+++ b/01-personal-blogging-platform-api/server/package.json
@@ -1,34 +1,40 @@
 {
-  "name": "server",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.20.3",
-    "colors": "^1.4.0",
-    "cors": "^2.8.5",
-    "express": "^4.21.0",
-    "express-async-errors": "^3.1.1",
-    "helmet": "^8.0.0",
-    "http-status-codes": "^2.3.0",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.7.0",
-    "morgan": "^1.10.0"
-  },
-  "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js",
-    "test": "jest",
-    "lint": "eslint .",
-    "build": "babel src -d dist",
-    "prepare": "npm run build",
-    "deploy": "npm run build && node dist/server.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "nodemon": "^3.1.7"
-  }
+    "name": "server",
+    "version": "1.0.0",
+    "description": "",
+    "main": "app.js",
+    "dependencies": {
+        "bcryptjs": "^2.4.3",
+        "body-parser": "^1.20.3",
+        "colors": "^1.4.0",
+        "cors": "^2.8.5",
+        "dotenv": "^16.4.7",
+        "express": "^4.21.0",
+        "express-async-errors": "^3.1.1",
+        "helmet": "^8.0.0",
+        "http-status-codes": "^2.3.0",
+        "jsonwebtoken": "^9.0.2",
+        "mongoose": "^8.7.0",
+        "morgan": "^1.10.0"
+    },
+    "scripts": {
+        "start": "node app.js",
+        "dev": "nodemon app.js",
+        "test": "jest",
+        "lint": "eslint .",
+        "lint:fix": "eslint . --fix",
+        "build": "babel src -d dist",
+        "prepare": "npm run build",
+        "deploy": "npm run build && node dist/app.js"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "@babel/cli": "^7.26.4",
+        "@babel/core": "^7.26.0",
+        "@babel/preset-env": "^7.26.0",
+        "eslint": "^9.17.0",
+        "nodemon": "^3.1.7"
+    }
 }
