--- a/04-expense-tracker-api/server/package.json
+++ b/04-expense-tracker-api/server/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
+  "type": "module",
   "dependencies": {
     "accepts": "^1.3.8",
     "array-flatten": "^1.1.1",
@@ -51,7 +52,7 @@
     "mime-types": "^2.1.35",
     "mongodb": "^6.9.0",
     "mongodb-connection-string-url": "^3.0.1",
-    "mongoose": "^8.7.0",
+    "mongoose": "^8.11.0",
     "mpath": "^0.9.0",
     "mquery": "^5.0.0",
     "ms": "^2.0.0",
